# Esp32WheelLeg

esp32-controller/software/: platformio.ini
esp32-controller/software/include/: CANDrive.h  MWMotor.h  MotionControl.h  MotorProcess.h
esp32-controller/software/src/: CANDrive.c  MWMotor.c  MotionControl.c  MotorProcess.c  leg_conv.c  leg_conv.h  leg_pos.c  leg_pos.h  leg_spd.c  leg_spd.h  lqr_k.c  lqr_k.h  main.cpp
matlab/: leg_conv.m  leg_conv.prj  leg_func_calc.m  leg_pos.m  leg_spd.m  lib_leg_conv.prj  lqr_k.m  lqr_k.prj  sys_calc.asv  sys_calc.m  sys_sim.slx  sys_sim.slx.autosave
matlab/codegen/lib/leg_conv/: buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  gcGuiReport.mat  leg_conv.c  leg_conv.h  leg_conv_data.h  leg_conv_initialize.c  leg_conv_initialize.h  leg_conv_terminate.c  leg_conv_terminate.h  leg_conv_types.h  leg_pos.c  leg_pos.h  leg_spd.c  leg_spd.h  lqr_k.c  lqr_k.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_defines.h  rt_nonfinite.c  rt_nonfinite.h  rtwtypes.h
matlab/codegen/lib/leg_conv/examples/: main.c  main.h
matlab/codegen/lib/leg_conv/html/: report.mldatx
matlab/codegen/lib/leg_conv/interface/: _coder_leg_conv_api.c  _coder_leg_conv_api.h  _coder_leg_conv_info.c  _coder_leg_conv_info.h  _coder_leg_conv_mex.c  _coder_leg_conv_mex.h
matlab/codegen/lib/lqr_k/: CMakeLists.txt  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  gcGuiReport.mat  lqr_k.c  lqr_k.h  lqr_k_data.h  lqr_k_initialize.c  lqr_k_initialize.h  lqr_k_terminate.c  lqr_k_terminate.h  lqr_k_types.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h
matlab/codegen/lib/lqr_k/examples/: main.c  main.h
matlab/codegen/lib/lqr_k/html/: report.mldatx
matlab/codegen/lib/lqr_k/interface/: _coder_lqr_k_api.c  _coder_lqr_k_api.h  _coder_lqr_k_info.c  _coder_lqr_k_info.h  _coder_lqr_k_mex.c  _coder_lqr_k_mex.h
matlab/slprj/_jitprj/: jitEngineAccessInfo.mat  s87amcvx4zWiPIM94Adh4h.l  s87amcvx4zWiPIM94Adh4h.mat  scYwUSFSwb88xIqgZ9BJx0G.l  scYwUSFSwb88xIqgZ9BJx0G.mat
matlab/slprj/_sfprj/EMLReport/: emlReportAccessInfo.mat  s87amcvx4zWiPIM94Adh4h.mat  scYwUSFSwb88xIqgZ9BJx0G.mat
matlab/slprj/_sfprj/leg_sim/: amsi_serial.mat
matlab/slprj/_sfprj/precompile/: UjtePDBx898jc9TbyWftIB.mat  autoInferAccessInfo.mat  sSpPHb62xdbvws7fgTchzF.mat
matlab/slprj/_sfprj/sys_sim/: amsi_serial.mat
matlab/slprj/_sfprj/sys_sim/_self/sfun/info/: binfo.mat
stm32-foc/software/: .mxproject  C6T6SimpleFoc.ioc
stm32-foc/software/MDK-ARM/: C6T6SimpleFoc.uvguix.48394  C6T6SimpleFoc.uvoptx  C6T6SimpleFoc.uvprojx  startup_stm32f103x6.lst
stm32-foc/software/MDK-ARM/C6T6SimpleFoc/: C6T6SimpleFoc.axf  C6T6SimpleFoc.build_log.htm  C6T6SimpleFoc.hex  C6T6SimpleFoc.htm  C6T6SimpleFoc.lnp  C6T6SimpleFoc.map  C6T6SimpleFoc_C6T6SimpleFoc.dep  bldcmotor.crf  bldcmotor.d  can.crf  can.d  flashstorage.crf  flashstorage.d  foc_utils.crf  foc_utils.d  focmotor.crf  focmotor.d  gpio.crf  gpio.d  magneticsensor.crf  magneticsensor.d  main.crf  main.d  stm32f1xx_hal.crf  stm32f1xx_hal.d  stm32f1xx_hal_can.crf  stm32f1xx_hal_can.d  stm32f1xx_hal_cortex.crf  stm32f1xx_hal_cortex.d  stm32f1xx_hal_dma.crf  stm32f1xx_hal_dma.d  stm32f1xx_hal_exti.crf  stm32f1xx_hal_exti.d  stm32f1xx_hal_flash.crf  stm32f1xx_hal_flash.d  stm32f1xx_hal_flash_ex.crf  stm32f1xx_hal_flash_ex.d  stm32f1xx_hal_gpio.crf  stm32f1xx_hal_gpio.d  stm32f1xx_hal_gpio_ex.crf  (+19 more)
stm32-foc/software/MDK-ARM/RTE/_C6T6SimpleFoc/: RTE_Components.h
stm32-foc/software/Src/: gpio.c  main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
stm32-foc/software/USER/: BLDCMotor.c  FlashStorage.c  MagneticSensor.c
